style: css updating

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> IS YOUR BIRTHDAY LUCKY </h1>
+    <h1> IS YOUR BIRTHDAY LUCKY 🎂 </h1>
     <div class="container"> 
-        <label for="date-of-birth"> DATE OF BIRTH : </label>
+        <div class="block1">
+        <label  for="date-of-birth"> DATE OF BIRTH :</label>
         <input type="date" id="date-of-birth">
+        </div>
+        <div class="block1">
         <label for="lucky-number">LUCKY NUMBER : </label>
         <input type="number" id="lucky-number">
+        </div>
         <button id="check-number"> CHECK NUMBER </button>
 <div id="output-box" disabled></div>
     </div>
