doc : adding note for users

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> IS YOUR BIRTHDAY LUCKY 🎂 </h1>
+  
     <div class="container"> 
         <div class="block1">
         <label  for="date-of-birth"> DATE OF BIRTH :</label>
@@ -18,6 +19,10 @@
         <input type="number" id="lucky-number">
         </div>
         <button id="check-number"> CHECK NUMBER </button>
+
+
+        <h3> Note : don't worry we are not storing your birthay information </h3>
+
 <div id="output-box" disabled></div>
     </div>
 
