--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
         <h3> Note : don't worry we are not storing your birthay information </h3>
 
 <div id="output-box" disabled></div>
+
+
+
+
     </div>
+
+    <footer class="footer">
+        <div id="footer-hedder"> social media presence</div>
+        <ul class="list-non-bullet social-links">
+           <li class="list-item-inline">
+                <a class="link" href="https://github.com/Gowtham00007">github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/Gowtham03071999">twitter</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/gowtham-s-a37914234">linkedin</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://gowtham-portfolio-new.netlify.app/">portfolio</a>
+            </li>
+        </ul>
+            </footer>
 
     <script src="main.js"></script>
 </body>
